--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     <span>27 <br> SEP</span>
                   </div>
               
-                  <p style="font-family:ta;color:#646464;font-size:15px;text-align:center;font-weight:bold">இன்று தமிழர் தந்தை தீபா ஆதித்தனார் அவர்களின் 111வது பிறந்த நாளை முன்னிட்டு எழும்பூரில் உள்ள அவரவருடைய சிலைக்கு H R O சர்வதேச அமைப்பின் சார்பாக மாலை அணிவித்து மரியாதை செய்யப்பட்டது</p>
+                  <p style="font-family:ta;color:#646464;font-size:15px;text-align:center;font-weight:bold">இன்று தமிழர் தந்தை ஆதித்தனார் அவர்களின் 111வது பிறந்த நாளை முன்னிட்டு எழும்பூரில் உள்ள அவரவருடைய சிலைக்கு H R O சர்வதேச அமைப்பின் சார்பாக மாலை அணிவித்து மரியாதை செய்யப்பட்டது</p>
                   <a href="#0" class="user"><i class="fas fa-user"></i>Admin</a>
                   <a href="#0" class="more"><i class="fas fa-long-arrow-alt-right"></i></a>
                 </div>
@@ -212,7 +212,7 @@
                     </div>
                     
                     <p style="font-family:ta;color:#646464;font-size:15px;text-align:center;font-weight:bold">
-                        HRO புதிய கொடி Dr.M.R.Sanjeevi அவர்களால் வெளியிடப்பட்டது. ஹரோ வில் உறுப்பினராக சேர விரும்பினால் ஹரோஇன்டெர்னஷனல்.இந் என்ற இணைய தளத்தின் மூலம் சேரலாம் .<br></br> மேலும் விவரங்களுக்கு அலுவலகத்தை தொடர்புகொள்ளுங்கள்</p>
+                        HRO புதிய கொடி Dr.M.R.Sanjeevi அவர்களால் வெளியிடப்பட்டது. அச்ஆர்ஒ வில் உறுப்பினராக சேர விரும்பினால் ஹரோஇன்டெர்னஷனல்.இந் என்ற இணைய தளத்தின் மூலம் சேரலாம் .<br></br> மேலும் விவரங்களுக்கு அலுவலகத்தை தொடர்புகொள்ளுங்கள்</p>
                     <a href="#0" class="user"><i class="fas fa-user"></i>Admin</a>
                     <a href="#0" class="more"><i class="fas fa-long-arrow-alt-right"></i></a>
                   </div>
