--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           </div>
 
           <!-- blog items -->
-          <div class="row">
+          <div class="row" style="padding-top:5px;">
             <div class="col-md-6 col-lg-4">
               <div class="item">
                 <div class="img">
@@ -201,7 +201,7 @@
               </div>
             </div>
 
-            <div class="col-md-6 col-lg-4">
+            <div class="col-md-6 col-lg-4" style="padding-top:5px;">
                 <div class="item">
                   <div class="img">
                     <img src="2.jpeg" alt=""style="height:200px;width:400px">
@@ -219,7 +219,7 @@
                 </div>
               </div>
 
-              <div class="col-md-6 col-lg-4">
+              <div class="col-md-6 col-lg-4" style="padding-top:5px;">
                 <div class="item">
                   <div class="img">
                     <img src="3.jpeg" alt="" style="height:260px;width:360px">
